# pg_glot

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.ja.md  README.ko.md  README.md  README.zh.md  about.toml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
THIRD_PARTY_LICENSES/: Apache-2.0.LICENSE.txt  README.md  RUST_CRATES.html  lindera.LICENSE.txt  pg_textsearch.LICENSE.txt
bakeoff/: REPORT.md  bakeoff_results.json  reproduce.sh  run_bakeoff.py  tokenizers.py
bench/: RESULTS.md  embed_cjk.py  eval_bm25_grid.py  eval_glot.py  eval_rrf.py  eval_trgm.py  fetch_miracl.py  mecab_pretokenize.py  pretokenize_lindera.py  stats.py
crates/glot-tokenizer/: Cargo.toml
crates/glot-tokenizer/src/: lib.rs
crates/korean-tokenizer/: Cargo.toml
crates/korean-tokenizer/src/: lib.rs
docker/: Dockerfile
docker/initdb/: 10-create-extension.sql
docs/: DESIGN.md
extensions/pg_glot/: Cargo.toml  pg_glot.control
extensions/pg_glot/src/: lib.rs
extensions/pg_glot/tests/pg_regress/expected/: setup.out
extensions/pg_glot_hybrid/: Cargo.toml  pg_glot_hybrid.control
extensions/pg_glot_hybrid/src/: customscan.rs  lib.rs  rank.rs
extensions/pg_textsearch_ko/: Cargo.toml  pg_textsearch_ko.control
extensions/pg_textsearch_ko/src/: lib.rs
extensions/pg_tsvector_ko/: Cargo.toml  pg_tsvector_ko.control
extensions/pg_tsvector_ko/src/: lib.rs
extensions/pg_tsvector_ko/tests/pg_regress/expected/: setup.out
scripts/: install-all.sh
