[package]
name = "pg_glot_hybrid"
description = "Korean BM25 + RRF hybrid search for PostgreSQL (pg_textsearch + pgvector over the korean config)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
# Layer B는 SQL 레벨 융합(BM25 leg=pg_textsearch, dense leg=pgvector, fusion=RRF)이라
# lindera(glot-tokenizer)를 직접 의존하지 않는다. korean config는 Layer A가 제공.
pgrx = "=0.18.0"

[dev-dependencies.pgrx-tests]
version = "=0.18.0"
